[package]
name = "basalt-macros"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basalt-common = { path = "../basalt-common" }
proc-macro2 = { version = "1.0", features = ["span-locations"] }

[lib]
proc-macro = true